--- a/itu-minitwit/Server/Pages/Shared/_Layout.cshtml
+++ b/itu-minitwit/Server/Pages/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
       @*   <a href="{{ url_for('public_timeline') }}">public timeline</a> | *@
       @*   <a href="{{ url_for('logout') }}">sign out [{{ g.user.username }}]</a> *@
       @* {% else %} *@
-        <a href="/public_timeline">public</a> |
+        <a href="/public">public timeline</a> |
         <a href="/register">sign up</a> |
         <a href="/login">sign in</a>
       </div>
