Add controller for messages. Dto automapping. Begun work on refactoring client html.

--- a/itu-minitwit/Client/Pages/FetchData.razor
+++ b/itu-minitwit/Client/Pages/FetchData.razor
@@ -38,11 +38,11 @@ else
 }
 
 @code {
-    private WeatherForecast[]? forecasts;
+    private WeatherForecastDto[]? forecasts;
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("WeatherForecast");
+        forecasts = await Http.GetFromJsonAsync<WeatherForecastDto[]>("WeatherForecast");
     }
 }
 
