--- a/itu-minitwit/Client/Shared/MainLayout.razor
+++ b/itu-minitwit/Client/Shared/MainLayout.razor
@@ -1,18 +1,22 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
-    <div class="sidebar">
+
+    <h1>MiniTwit</h1>
+    <div class=navigation>
         <NavMenu />
     </div>
 
-    <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
+    <article class=body>
+        @Body
+    </article>
 
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
+    <div class=footer>
+        MiniTwit &mdash; An ASP.NET Core Application
+    </div>
+
+    <div class="sidebar">
+        <NavMenu />
+    </div>
 </div>
 
