--- a/itu-minitwit/Client/Shared/NavMenu.razor.css
+++ b/itu-minitwit/Client/Shared/NavMenu.razor.css
@@ -18,6 +18,11 @@
     top: -2px;
 }
 
+.flex-row {
+    display: flex;
+    flex-direction: row;
+}
+
 .nav-item {
     font-size: 0.9rem;
     padding-bottom: 0.5rem;
