--- a/itu-minitwit/Client/Shared/NavMenu.razor
+++ b/itu-minitwit/Client/Shared/NavMenu.razor
@@ -8,15 +8,10 @@
 </div>
 
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
-    <nav class="flex-row">
+    <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="public" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Public timeline
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="public2">
-                <span class="oi oi-plus" aria-hidden="true"></span> Public2
+            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
         <div class="nav-item px-3">
@@ -42,4 +37,3 @@
         collapseNavMenu = !collapseNavMenu;
     }
 }
-
