--- a/itu-minitwit/Client/Shared/NavMenu.razor
+++ b/itu-minitwit/Client/Shared/NavMenu.razor
@@ -1,39 +1,24 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">itu-minitwit</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+﻿<div class="flex-row">
+    <div class="nav-item px-3">
+        <NavLink class="twit-link" href="" Match="NavLinkMatch.All">
+            <div class="link-content">
+                <span class="oi oi-home" aria-hidden="true"></span> public timeline
+            </div>
+        </NavLink>
     </div>
+    <div class="nav-item px-3">
+        <NavLink class="twit-link" href="counter">
+            <div class="link-content">
+                <span class="oi oi-plus" aria-hidden="true"></span> sign up
+            </div>
+        </NavLink>
+    </div>
+    <div class="nav-item px-3">
+        <NavLink class="twit-link" href="fetchdata">
+            <div class="link-content">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> sign in
+            </div>
+        </NavLink>
+    </div>
+
 </div>
-
-<div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>
-    </nav>
-</div>
-
-@code {
-    private bool collapseNavMenu = true;
-
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-    private void ToggleNavMenu()
-    {
-        collapseNavMenu = !collapseNavMenu;
-    }
-}
