--- a/itu-minitwit/Client/Shared/NavMenu.razor
+++ b/itu-minitwit/Client/Shared/NavMenu.razor
@@ -9,14 +9,14 @@
     <div class="nav-item px-3">
         <NavLink class="twit-link" href="counter">
             <div class="link-content">
-                <span class="oi oi-plus" aria-hidden="true"></span> sign up
+                <span class="oi oi-account-login" aria-hidden="true"></span> sign up
             </div>
         </NavLink>
     </div>
     <div class="nav-item px-3">
         <NavLink class="twit-link" href="fetchdata">
             <div class="link-content">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> sign in
+                <span class="oi oi-lock-locked" aria-hidden="true"></span> sign in
             </div>
         </NavLink>
     </div>
