Added authentication to server and frontend. Can now register users. Co-authored By: SadlifeCaw <caws@itu.dk>, Stalin1999 <mpia@itu.dk>

--- a/itu-minitwit/Client/Components/Tweet.razor
+++ b/itu-minitwit/Client/Components/Tweet.razor
@@ -6,13 +6,13 @@
     <div class="tweet-container">
         <div class="profile-container">
             <div class="profile-picture">
-                <p>@Message.Author.Username.Substring(0, 2).ToUpper()</p>
+                <p>@Message.Author.UserName.Substring(0, 2).ToUpper()</p>
             </div>
         </div>
         <div class="tweet-content">
             <p class="tweet-text">@Message.Text</p>
             <div class="tweet-footer">
-                <a href="profile/@Message.Author.Username">@Message.Author.Username</a>
+                <a href="profile/@Message.Author.UserName">@Message.Author.UserName</a>
                 <p class="tweet-date">@Message.PublishDate</p>
             </div>
         </div>
