--- a/itu-minitwit/Client/_Imports.razor
+++ b/itu-minitwit/Client/_Imports.razor
@@ -8,4 +8,5 @@
 @using Microsoft.JSInterop
 @using itu_minitwit.Client
 @using itu_minitwit.Client.Shared
+@using Microsoft.AspNetCore.Components.Authorization
 
