--- a/itu-minitwit/Server/Pages/Public.cshtml
+++ b/itu-minitwit/Server/Pages/Public.cshtml
@@ -24,7 +24,7 @@
         {
             <li>
                 <img src="https://ui-avatars.com/api/?name=@m.Author.Email&size=48">
-                <strong><a href="/user/@m.Author.Id">@m.Author.Username</a></strong>
+                <strong><a href="/user/@m.Author.Id">@m.Author.UserName</a></strong>
                 @m.Text
                 <small>&mdash; @m.PublishDate</small>
             </li>
