Make registration possible with username. Fix login problem.

--- a/itu-minitwit/Client/Shared/NavMenu.razor.css
+++ b/itu-minitwit/Client/Shared/NavMenu.razor.css
@@ -22,3 +22,11 @@
     color: black;
     border: none;
 }
+
+.sign-out {
+    cursor: pointer;
+}
+
+.profile-information {
+    margin-left: auto;
+}
