--- a/itu-minitwit/Client/Shared/NavMenu.razor
+++ b/itu-minitwit/Client/Shared/NavMenu.razor
@@ -1,4 +1,8 @@
-﻿<div class="flex-row">
+﻿@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@inject NavigationManager Navigation
+@inject SignOutSessionStateManager SignOutManager
+
+<div class="flex-row">
     <div class="nav-item px-3">
         <NavLink class="twit-link" href="" Match="NavLinkMatch.All">
             <div class="link-content">
@@ -6,21 +10,44 @@
             </div>
         </NavLink>
     </div>
-    <div class="nav-item px-3">
-        <NavLink class="twit-link" href="counter">
-            <div class="link-content">
-                <span class="oi oi-account-login" aria-hidden="true"></span> sign up
-            </div>
-        </NavLink>
-    </div>
-    <div class="nav-item px-3">
-        <NavLink class="twit-link" href="fetchdata">
-            <div class="link-content">
-                <span class="oi oi-lock-locked" aria-hidden="true"></span> sign in
-            </div>
-        </NavLink>
-    </div>
     
-    <LoginDisplay />
-
+    <AuthorizeView>
+        <NotAuthorized>
+            <div class="nav-item px-3">
+                <NavLink class="twit-link" href="authentication/register">
+                    <div class="link-content">
+                        <span class="oi oi-account-login" aria-hidden="true"></span> sign up
+                    </div>
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="twit-link" href="authentication/login">
+                    <div class="link-content">
+                        <span class="oi oi-lock-locked" aria-hidden="true"></span> sign in
+                    </div>
+                </NavLink>
+            </div>
+        </NotAuthorized>
+        <Authorized>
+            <div class="nav-item px-3 sign-out">
+                <NavLink class="twit-link" @onclick="BeginSignOut">
+                    <div class="link-content">
+                        <span class="oi oi-account-logout" aria-hidden="true"></span> sign out
+                    </div>
+                </NavLink>
+            </div>
+            
+            <div class="profile-information">
+                <a href="profile/@(context.User.Identity?.Name!.Split("@")[0])">Hello, @context.User.Identity?.Name!</a
+            </div>
+        </Authorized>
+    </AuthorizeView>
 </div>
+
+@code {
+    private async Task BeginSignOut(MouseEventArgs args)
+    {
+        await SignOutManager.SetSignOutState();
+        Navigation.NavigateTo("authentication/logout");
+    }
+}
