--- a/itu-minitwit/Client/Shared/NavMenu.razor
+++ b/itu-minitwit/Client/Shared/NavMenu.razor
@@ -38,7 +38,7 @@
             </div>
             
             <div class="profile-information">
-                <a href="profile/@(context.User.Identity?.Name!.Split("@")[0])">Hello, @context.User.Identity?.Name!</a
+                <a href="profile/@(context.User.Identity?.Name!.Split("@")[0])">Hello, @context.User.Identity?.Name!</a>
             </div>
         </Authorized>
     </AuthorizeView>
