--- a/MiniTwit/Pages/Public.cshtml
+++ b/MiniTwit/Pages/Public.cshtml
@@ -1,5 +1,5 @@
 @page
-@using MiniTwit.Services
+@using MiniTwit.Repositories
 @model MiniTwit.Pages.Public
 @inject IMessageRepository MessageRepository
 
