--- a/MiniTwit/Pages/Shared/_Layout.cshtml
+++ b/MiniTwit/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-@using MiniTwit.Services
+@using MiniTwit.Repositories
 @inject IUserRepository UserRepository
 @inject IHttpContextAccessor HttpContextAccessor
 
