--- a/MiniTwit/Pages/UserTimeline.cshtml
+++ b/MiniTwit/Pages/UserTimeline.cshtml
@@ -1,5 +1,5 @@
 @page "/{username?}"
-@using MiniTwit.Services
+@using MiniTwit.Repositories
 @model MiniTwit.Pages.UserTimeline
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @inject IMessageRepository MessageRepository
