--- a/MiniTwit/Pages/MyTimeline.cshtml
+++ b/MiniTwit/Pages/MyTimeline.cshtml
@@ -1,5 +1,5 @@
 @page "/"
-@using MiniTwit.Services
+@using MiniTwit.Repositories
 @model MiniTwit.Pages.MyTimeline
 @inject IMessageRepository MessageRepository
 @inject IUserRepository UserRepository
