--- a/MiniTwit/Pages/Shared/_Layout.cshtml
+++ b/MiniTwit/Pages/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
         @RenderBody()
     </div>
     <div class=footer>
-        MiniTwit &mdash; An ASP.NET Core Application
+        MiniTwit &mdash; An ASP.NET Application
     </div>
 </div>
 
