--- a/MiniTwit/Pages/UserTimeline.cshtml
+++ b/MiniTwit/Pages/UserTimeline.cshtml
@@ -1,4 +1,6 @@
 @page "/{username?}"
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using MiniTwit.Database
 @using MiniTwit.Repositories
 @model MiniTwit.Pages.UserTimeline
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
@@ -7,53 +9,65 @@
 
 @{
     Layout = "Shared/_Layout";
-    var messages = await MessageRepository.GetByUser(Model.Username);
     var currentUser = await UserRepository.GetCurrent();
+    var user = await UserRepository.Exists(Model.Username); 
+    var messages = await MessageRepository.GetByUser(Model.Username);
 }
 
 <div>
-    <h2> @Model.Username's Timeline </h2>
-        @if (currentUser != null)
-        {
-            @if (currentUser.Username == Model.Username)
+    @if (user == null)
+    {
+        <h2>404 User not found.</h2>
+    }
+    else
+    {
+        <div>
+
+            <h2> @user.Username's Timeline </h2>
+            @if (currentUser != null)
             {
-                <span>This is you!</span>
+                @if (currentUser == user)
+                {
+                    <span>This is you!</span>
+                }
+                else if (await UserRepository.IsFollowing(Model.Username))
+                {
+                    <div>
+                        You are currently following this user.
+                        <form method="post" class="inline">
+                            <button type="submit" class="link-button">
+                                <strong>Unfollow user</strong>
+                            </button>
+                        </form>
+                    </div>
+                }
+                else
+                {
+                    <div>
+                        You are not yet following this user.
+                        <form method="post" class="inline">
+                            <button type="submit" class="link-button">
+                                <strong>Follow user</strong>
+                            </button>
+                        </form>
+                    </div>
+                }
             }
-            else if (await UserRepository.IsFollowing(Model.Username))
-            {
-                <div>
-                    You are currently following this user.
-                    <form method="post" class="inline">
-                        <button type="submit" class="link-button">
-                            <strong>Unfollow user</strong>
-                        </button>
-                    </form>
-                </div>
-            } else
-            {
-                <div>
-                    You are not yet following this user.
-                    <form method="post" class="inline">
-                        <button type="submit" class="link-button">
-                            <strong>Follow user</strong>
-                        </button>
-                    </form>
-                </div>
-            }
-        }
-        <ul class="messages">
-            @foreach (var m in messages)
-            {
-                <li>
-                    <img style="width: 48px; height: 48px;" src="https://api.dicebear.com/5.x/identicon/svg?seed=@m.Author.Username">
-                    <strong><a href="/@m.Author.Username">@m.Author.Username</a></strong>
-                    @m.Text
-                    <small>&mdash; @m.PublishDate</small>
-                </li>
-            }
-            @if (messages.Count() == 0)
-            {
-                <li><em>There's no message so far.</em></li>
-            }
-        </ul>
+            <ul class="messages">
+                @foreach (var m in messages)
+                {
+                    <li>
+                        <img style="width: 48px; height: 48px;" src="https://api.dicebear.com/5.x/identicon/svg?seed=@m.Author.Username">
+                        <strong><a href="/@m.Author.Username">@m.Author.Username</a></strong>
+                        @m.Text
+                        <small>&mdash; @m.PublishDate</small>
+                    </li>
+                }
+                @if (!messages.Any())
+                {
+                    <li><em>There's no message so far.</em></li>
+                }
+            </ul>
+        </div>
+    }
 </div>
