--- a/MiniTwit/Pages/Shared/_Layout.cshtml
+++ b/MiniTwit/Pages/Shared/_Layout.cshtml
@@ -14,8 +14,11 @@
 <html>
 <head>
     <title>@ViewData["Title"]</title>
-    @* <title> Welcome | MiniTwit</title> *@
     <link href="/css/style.css" rel="stylesheet" type="text/css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
 </head>
 <body>
 <div class=page>
