--- a/MiniTwit/Pages/Login.cshtml
+++ b/MiniTwit/Pages/Login.cshtml
@@ -3,6 +3,7 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
+    ViewData["Title"] = "Sign In | MiniTwit";
     Layout = "Shared/_Layout";
 }
 
