--- a/MiniTwit/Pages/MyTimeline.cshtml
+++ b/MiniTwit/Pages/MyTimeline.cshtml
@@ -6,6 +6,7 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
+    ViewData["Title"] = "My Timeline | MiniTwit";
     Layout = "Shared/_Layout";
     var messages = await MessageRepository.GetFromFollows();
 }
