--- a/MiniTwit/Pages/UserTimeline.cshtml
+++ b/MiniTwit/Pages/UserTimeline.cshtml
@@ -1,6 +1,5 @@
 @page "/{username?}"
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@using MiniTwit.Database
 @using MiniTwit.Repositories
 @model MiniTwit.Pages.UserTimeline
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
@@ -11,6 +10,7 @@
     Layout = "Shared/_Layout";
     var currentUser = await UserRepository.GetCurrent();
     var user = await UserRepository.Exists(Model.Username); 
+    ViewData["Title"] = $"{(user != null ? user.Username : "404")} | MiniTwit";
     var messages = await MessageRepository.GetByUser(Model.Username);
 }
 
