implement realtime for all timelines

--- a/MiniTwit/Pages/MyTimeline.cshtml
+++ b/MiniTwit/Pages/MyTimeline.cshtml
@@ -20,7 +20,7 @@
               <input type="submit" value="Share">
             </form>
           </div>
-    <ul class="messages">
+    <ul id="messagelist" class="messages">
             @foreach (var m in messages)
             {
                 <li>
@@ -36,3 +36,7 @@
             }
         </ul>
 </div>
+
+<script src="~/js/signalr/dist/browser/signalr.js"></script>
+<script src="~/js/realtime.js"></script>
+<script src="~/js/realtime_mytimeline.js"></script>
