--- a/MiniTwit/Pages/Public.cshtml
+++ b/MiniTwit/Pages/Public.cshtml
@@ -31,4 +31,5 @@
 </div>
 
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
+<script src="~/js/realtime.js"></script>
 <script src="~/js/realtime_public.js"></script>
