Bug fixed with hours being displayed and hour earlier
Co-authored-by: Stalin1999 madspiriwe99@gmail.com

--- a/MiniTwit/Pages/Shared/_Tweet.cshtml
+++ b/MiniTwit/Pages/Shared/_Tweet.cshtml
@@ -6,5 +6,5 @@
         <a href="/@Model.Author.Username">@Model.Author.Username</a>
     </strong>
     @Model.Text
-    <small>&mdash; @Model.PublishDate</small>
+    <small>&mdash; <span class="publish-date">@Model.PublishDate.Value.AddHours(1)</span></small>
 </li>
