--- a/MiniTwit/Pages/Public.cshtml
+++ b/MiniTwit/Pages/Public.cshtml
@@ -37,6 +37,9 @@
     </div>
 </div>
 
-<script src="~/js/signalr/dist/browser/signalr.js"></script>
-<script src="~/js/realtime.js"></script>
-<script src="~/js/realtime_public.js"></script>
+@if (page == 1)
+{
+    <script src="~/js/signalr/dist/browser/signalr.js"></script>
+    <script src="~/js/realtime.js"></script>
+    <script src="~/js/realtime_public.js"></script>
+}
