--- a/MiniTwit/Pages/Shared/_Layout.cshtml
+++ b/MiniTwit/Pages/Shared/_Layout.cshtml
@@ -10,8 +10,8 @@
     }
 }
 
-<!DOCTYPE html lang="en">
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <title>@ViewData["Title"]</title>
     <link href="/css/style.css" rel="stylesheet" type="text/css" />
