--- a/MiniTwit/wwwroot/css/style.css
+++ b/MiniTwit/wwwroot/css/style.css
@@ -1,8 +1,34 @@
+/*html, body {*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*}*/
+
 body {
-    background: #CAECE9;
+    background: linear-gradient(-45deg, #CAECE9, #94B4B1, #C0FCF7, #9B0058);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
     font-family: 'Trebuchet MS', sans-serif;
     font-size: 14px;
+    overscroll-behavior-y: none;
 }
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+/*body {*/
+/*    background: #CAECE9;*/
+/*    font-family: 'Trebuchet MS', sans-serif;*/
+/*    font-size: 14px;*/
+/*}*/
 
 a {
     color: #26776F;
